assets/css/privacyPoliceAndLegalnotice.css
body{
    font-family: inter;
    margin: 0;
    overflow: hidden;
}

section {
    margin-left: 300px;
    margin-right: 20px;
    font-size: 10px;
}

.section-scrollbar{
    overflow: scroll;
    height: calc(100vh - 96px);
}

span{
    font-size: 18px;
}

p{
    font-size: 18px;
}

b{
    font-size: 24px;
}

.header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-align: center;
    font-size: 40px;
}

.get-back-arrow{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 32px;
    width: 32px;
    margin-right: 40px;
}

.get-back-arrow:hover{
    background-color: rgb(213,213,213);
    border-radius: 30px;
}

.span-join{
    color: rgb(56,171,226);
    cursor: default;
}

.undersection-headline{
    font-size: 25px;
}

.distance{
    margin-top: 20px;
}

.table-container{
    display: flex;
    flex-direction: column;
}

.table-span{
    font-size: 18px;
}

.under-table-section{
    display: flex;
    flex-direction: row;
}

.p-distance{
    margin: 0;
}

::-webkit-scrollbar {
    width: 10px;
}

*::-webkit-scrollbar-track {
    background: #F6F7F8;
    border-radius: 10px;
    border: solid 2px #A8A8A8;
}

*::-webkit-scrollbar-thumb {
    background-color: #e7e7e7;
    border-radius: 10px;
    border: 2px solid #bbc3ba;
}

*::-webkit-scrollbar-thumb:hover {
    background-color: #29abe2;
}

@media (max-width: 900px){
    h1{
        font-size: 30px;
    }
    .undersection-headline{
        font-size: 20px;
    }
    @media (max-width: 750px){
        section{
            margin-left: 20px;
        }
    }
    
@media (max-width: 450px){
    h1{
        font-size: 20px;
    }
    p{
        font-size: 14px;
    }
    .undersection-headline{
        font-size: 15px;
    }
    .get-back-arrow{
        margin-right: 10px;
    }
}
}

